--- a/src/components/base.css
+++ b/src/components/base.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Avenir";
+  font-family: "Times New Roman", serif;
   font-weight: 400;
   font-style: normal;
   src: url("/avenir-400.woff2") format("woff2");
@@ -7,11 +7,11 @@
 }
 
 body {
-  font-family: "Avenir", Tahoma, Arial, Helvetica, sans-serif;
+  font-family: "Times New Roman", sans-serif;
   font-size: 1em;
   line-height: 1.65;
   color: #373F49;
-  background: #eee;
+  background: rgb(170, 192, 252);
   margin: 0;
 }
 
@@ -28,7 +28,7 @@ h3 {
 }
 
 a {
-  color: currentColor;
+  color: rgb(30, 36, 73);
 }
 
 .wrapper {
