--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: 61.8vh;
   max-height: 400px;
-  background: #e1e1e1;
-  font-size: 2em;
+  background: #f5dc6f;
+  font-size: 4em;
   overflow: hidden;
 }
